--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-ui-router": "~0.2.10",
     "ui.bootstrap": "~0.11.0",
     "angular-bootstrap": "~0.11.0",
-    "ngAnimate-animate.css": "~0.1.1"
+    "ngAnimate-animate.css": "~0.1.1",
+    "angular-google-chart": "~0.0.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
